# oc-p7

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  config.toml  debug.toml  docker-compose.yml  logging_config.py  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  models.py  rag.py
docs/: test_set.json
scripts/: benchmark_rag.py  build_index.py  clean_events.py  config.py  fetch_events.py
tests/: conftest.py  evaluate_rag.py  test_api.py  test_benchmark.py  test_clean.py  test_fetch.py  test_index.py
tests/fixtures/: debug_events_clean.csv
tests/integration/: evaluate_rag.py
ui/: Dockerfile  app.py
