[project]
name = "oc-p7"
version = "0.1.0"
description = "RAG system for cultural event recommendations in Bouches-du-Rhône (dept. 13)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "httpx>=0.28.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.0.0",
    "ragas>=0.4.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "tomli>=2.0.0 ; python_version < '3.11'",
    "faiss-cpu>=1.13.2",
    "uvicorn>=0.46.0",
    "pydantic-settings>=2.14.0",
    "langchain-classic>=1.0.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
ui = [
    "gradio>=6.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--ignore=tests/integration"
#   Coverage runs at pre-push only (pre-commit hook). To run manually:
#   uv run pytest --cov=scripts --cov-report=term-missing

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.coverage.run]
branch = true # measure branch coverage (better than line coverage)
source = ["scripts"]

[tool.coverage.report]
fail_under = 50
show_missing = true # display uncovered lines
skip_covered = true # hide fully covered files

[tool.pyright]
# Ragas has incomplete type stubs — ignore evaluate_rag.py
# config.py excluded: pydantic-settings AppSettings() not understood by static checkers
include = ["api", "scripts", "tests/test_*.py"]

[tool.pyright.analysis]
ignore = ["tests/integration/evaluate_rag.py", "config.py"]

[tool.ty.analysis]
respect-type-ignore-comments = true
